@@ -1,1 +1,1 @@
-10.8.0-digiumphones-rc2
+10.8.0-digiumphones
