@@ -1,3 +1,7 @@
+2012-09-13  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 10.8.0-digiumphones Released.
+
 2012-09-11  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 10.8.0-digiumphones-rc2 Released.
